--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.29.7",
+    "axios": "^1.4.0",
+    "encoding": "^0.1.13",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "framer-motion": "^10.12.12",
+    "i18next": "^22.5.0",
+    "i18next-browser-languagedetector": "^7.0.1",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
+    "react-i18next": "^12.3.1",
     "react-icons": "^4.8.0",
     "styled-components": "^5.3.10",
     "styled-system": "^5.1.5",
